[tool.poetry]
name = "automation"
version = "0.1.0"
description = ""
authors = ["insolor <insolor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.15.2"
loguru = "^0.7.3"
pydantic = "^2.11"
strictyaml = "^1.7.3"
df-translation-toolkit = {version = "^0.8.0", source = "dfint"}
alternative-encodings = {version = "^0.3.1", source = "dfint"}
langcodes = {extras = ["data"], version = "^3.5.0"}
scour = "^0.38.2"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"

[[tool.poetry.source]]
name = "dfint"
url = "https://dfint.github.io/pypi-index/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# poetry run process ../
process = "automation.process:app"
# poetry run progress_diagram ../translations-backup/translations/dwarf-fortress-steam ../images/dwarf-fortress-steam.svg
progress_diagram = "automation.progress_diagram:app"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "S101",
    "C408",
    "T203",
]
