[project]
name = "automation"
version = "0.1.0"
description = ""
authors = [{ name = "insolor", email = "insolor@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "typer>=0.15.4,<0.16",
    "loguru>=0.7.3,<0.8",
    "pydantic~=2.11",
    "strictyaml>=1.7.3,<2",
    "df-translation-toolkit>=0.8.0,<0.9",
    "alternative-encodings>=0.3.1,<0.4",
    "tqdm>=4.67.1,<5",
]

[dependency-groups]
dev = ["ruff>=0.12.7,<0.13"]

[[tool.uv.index]]
name = "dfint"
url = "https://dfint.github.io/pypi-index/"
explicit = true

[tool.uv.sources]
df-translation-toolkit = { index = "dfint" }
alternative-encodings = { index = "dfint" }

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "S101",
    "C408",
    "T203",
]

[tool.poe.tasks]
process.script = "automation.process:app"
